# AsynchronousAgent_Abacus

./: .gitignore  BUILD_UPDATES.md  Dockerfile  Makefile  audit_report.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml  dependency-update.yml
apps/web/: .eslintrc.json  next.config.js  package.json  tsconfig.json
libs/shared/: package.json  tsconfig.json
services/api/: pyproject.toml  pytest.ini  requirements.txt
