
[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-benchmark-api"
version = "0.1.0"
description = "Agent Benchmark API Service"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "pydantic==1.10.8",
    "httpx==0.28.1",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "pip-audit==2.9.0",
    "black",
    "isort",
    "flake8",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
